--- a/tmap.html
+++ b/tmap.html
@@ -87,7 +87,8 @@ function initTmap(){
 	});
 	
 	var headers = {}; 
-	headers["appKey"]="발급AppKey";
+	// headers["appKey"]="발급AppKey";
+	headers["appKey"]="b1D2HmAsyi1zraMpb0ZYA8bftmhRPUR53QckQnpD";
 	
 	$.ajax({
 		type:"POST",
